[package]
name = "mining-scheduler"
version = "0.1.0"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0"
regex = "1"
clap = "2"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
