[package]
name = "mining-scheduler"
version = "0.2.0"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
edition = "2018"
description = "A program that stops and starts a process based on other currently open processes."
license = "MIT"
repository = "http://github.com/TypicalFork/mining-scheduler/"
keywords = ["scheduler", "automation", "mining"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0"
regex = "1"
clap = "2"

[badges]
maintenance = { status = "passively-maintained" }
